--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -6,7 +6,7 @@
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td></td> </tr>
+      <tr> <td>13:00</td>  <td>Using software with environment modules</td> </tr>
       <tr> <td>14:50</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
