--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -2,12 +2,23 @@
   <div class="col-md-6">
     <h3>Tuesday Sep 29</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>before</td> <td><a href="https://www.surveymonkey.com/r/J95QZGY">Pre-workshop survey</a></td> </tr>
+      <tr> <td>09:00</td>  <td>Workshop overview and introductions</td> </tr>
+      <tr> <td>09:15</td> <td><a href="https://hpc-carpentry.github.io/hpc-shell/00-hpc-intro/index.html">Why Use a Cluster?</a></td> </tr>
+      <tr> <td>09:45</td> <td><a href="https://hpc-carpentry.github.io/hpc-shell/01-connecting/index.html">Connecting to the remote HPC system</a></td> </tr>
+      <tr> <td>10:15</td> <td><a href="https://hpc-carpentry.github.io/hpc-shell/02-navigation/index.html">Moving around and looking at things</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Using software with environment modules</td> </tr>
-      <tr> <td>14:50</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>10:45</td> <td><a href="https://hpc-carpentry.github.io/hpc-shell/03-files/index.html">Writing and reading files</a></td> </tr>
+      <tr> <td>11:30</td>  <td>Lunch break</td> </tr>
+      <tr> <td>12:30</td>  <td><a href="https://hpc-carpentry.github.io/hpc-shell/04-wildcards-pipes/index.html">Wildcards and pipes</td> </tr>
+      <tr> <td>13:30</td>  <td>Logging in and commands available to the user</td> </tr>
+      <tr> <td>14:00</td>  <td>SBATCH options/script</td> </tr>
+      <tr> <td>14:30</td>  <td>Batch jobs</td> </tr>
+      <tr> <td>15:00</td>  <td>Interactive jobs</td> </tr>
+      <tr> <td>15:30</td>  <td>Profiling</td> </tr>
+      <tr> <td>16:00</td>  <td>Basic job arrays</td> </tr>
+      <tr> <td>16:30</td>  <td>Moving data around (Globus)</td> </tr>
+      <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
