--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -10,7 +10,7 @@
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>10:45</td> <td><a href="https://hpc-carpentry.github.io/hpc-shell/03-files/index.html">Writing and reading files</a></td> </tr>
       <tr> <td>11:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>12:30</td>  <td><a href="https://hpc-carpentry.github.io/hpc-shell/04-wildcards-pipes/index.html">Wildcards and pipes</td> </tr>
+      <tr> <td>12:30</td>  <td><a href="https://hpc-carpentry.github.io/hpc-shell/04-wildcards-pipes/index.html">Wildcards and pipes</a></td> </tr>
       <tr> <td>13:30</td>  <td>Logging in and commands available to the user</td> </tr>
       <tr> <td>14:00</td>  <td>SBATCH options/script</td> </tr>
       <tr> <td>14:30</td>  <td>Batch jobs</td> </tr>
